# ads_spec_mobile_nativo_android

./: .mailmap  404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  pytest_lf.txt  requirements.txt  sitemap.xml  tasks.py
.github/workflows/: documentation.yaml
aulas/: index.html
aulas/aula-01/: index.html
aulas/aula-02/: index.html
aulas/aula-03/: index.html
aulas/aula-04/: index.html
aulas/aula-05/: index.html
aulas/aula-06/: index.html
aulas/aula-07/: index.html
aulas/aula-08/: index.html
aulas/aula-09/: index.html
aulas/aula-10/: index.html
aulas/aula-11/: index.html
aulas/aula-12/: index.html
aulas/aula-13/: index.html
aulas/aula-14/: index.html
aulas/aula-15/: index.html
aulas/aula-16/: index.html
docs/: audit.md  index.md
docs/aulas/: aula-01.md  aula-02.md  aula-03.md  aula-04.md  aula-05.md  aula-06.md  aula-07.md  aula-08.md  aula-09.md  aula-10.md  aula-11.md  aula-12.md  aula-13.md  aula-14.md  aula-15.md  aula-16.md
docs/quizzes/: quiz-01.md  quiz-02.md  quiz-03.md  quiz-04.md  quiz-05.md  quiz-06.md  quiz-07.md  quiz-08.md  quiz-09.md  quiz-10.md  quiz-11.md  quiz-12.md  quiz-13.md  quiz-14.md  quiz-15.md  quiz-16.md
exercicios/: index.html
exercicios/exercicio-01/: index.html
exercicios/exercicio-02/: index.html
exercicios/exercicio-03/: index.html
exercicios/exercicio-04/: index.html
exercicios/exercicio-05/: index.html
exercicios/exercicio-06/: index.html
exercicios/exercicio-07/: index.html
exercicios/exercicio-08/: index.html
exercicios/exercicio-09/: index.html
materiais/: index.html
plano-ensino/: index.html
print_page/: index.html
project_roadmap/: index.html
projetos/: index.html
projetos/projeto-01/: index.html
quizzes/: index.html
search/: search_index.json
setups/: index.html
slides/: index.html
sobre/: index.html
tests/: test_layout.py  test_navigation.py
(+48 files in other folders)
